--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gamefree4play</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G43R54Y4RJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-G43R54Y4RJ");
+    </script>
   </head>
   <body>
     <div id="root"></div>
